--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>This is a new practice repository</p>
-    <p>This is a new branch feature</p>
+    <p>This is a new branch feature (button)</p>
 </body>
 </html>
